2014-05-06  Patrice Dumas  <pertusus@free.fr>

	* tp/Makefile.am (install-exec-hook): use $(transform) for
	--program-suffix.  Report from Glenn Morris.

2014-05-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\secfonts): increase \setleading to 17pt.

2014-05-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (read_quoted_string): Include any quoting
	characters in returned length.  Account for terminator character
	appearing immediately (for example, if input is malformed).
	(parse_top_node_line): Read fields with read_quoted_string.
	(scan_reference_label): Arguments changed.  Call
	canonicalize_whitespace on reference label.  Don't output "See".
	Caller in scan_node_contents updated.
	(colon_after_newline): Deleted.
	(scan_node_contents): Remove S_SkipDest flag from search so that
	results are at beginning of match instead of end.  Use
	read_quoted_string to get reference labels.

	* info/session.c (info_handle_pointer): Read "Next" etc. pointers
	with PARSE_NODE_VERBATIM instead of PARSE_NODE_START.

2014-05-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (read_quoted_string): New function.
	* info/search.c (find_node_in_binding): Call read_quoted_string.

	* info/t/goto-quoted.sh,
	info/t/reference-quoted.sh,
	info/t/next-quoted.sh: New tests.

2014-05-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/apropos-index.sh: New test.

2014-05-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_indices_of_file_buffer, do_info_index_search)
	(index_entry_exists, apropos_in_all_indices, info_index_apropos)
	(info_virtual_index)
	Call free instead of info_free_references or info_reference_free,
	because the REFERENCE * objects in the array are still referenced
	elsewhere.

	* info/info-utils.c (info_concatenate_references): Don't free arguments.
	Always return a new array, even if either of the arguments are null.
	Callers updated.

	* info/indices.c (info_apropos): Merged into info.c:main.