@@ -120,6 +120,7 @@ C<\@include>s is generated, intended to be C<\@include>d in turn within
 a hand-written top-level file.
 
 Options:
+  --appendix-sections     use appendix-like sections.
   --base-level=NUM|NAME   level of the head1 commands; default 0.
   --debug=NUM             set debugging level.
   --help                  display this help and exit.
@@ -140,6 +141,7 @@ Texinfo home page: http://www.gnu.org/software/texinfo/\n");
 
 my $base_level = 0;
 my $unnumbered_sections = 0;
+my $appendix_sections = 0;
 my $output = '-';
 my $top = 'top';
 my $preamble = undef;
@@ -167,6 +169,7 @@ There is NO WARRANTY, to the extent permitted by law.\n"), "2014";
      }
    },
   'unnumbered-sections!' => \$unnumbered_sections,
+  'appendix-sections!' => \$appendix_sections,
   'output|o=s' => \$output,
   'preamble=s' => \$preamble,
   'subdir=s' => \$subdir,
@@ -370,6 +373,8 @@ foreach my $file (@processed_files) {
   }
   if ($unnumbered_sections) {
     $new->texinfo_sectioning_style('unnumbered');
+  } elsif ($appendix_sections) {
+    $new->texinfo_sectioning_style('appendix');
   }
   if ($base_level > 0 and @manuals) {
     $new->texinfo_internal_pod_manuals(\@manuals);
@@ -511,6 +516,12 @@ hand-written top-level file.
 =head1 OPTIONS
 
 =over
+
+=item B<--appendix-sections>
+
+Use appendix sectioning commands (C<@appendix>, ...) instead of the
+default numbered sectioning Texinfo @-commands (C<@chapter>,
+C<@section>, ...).
 
 =item B<--base-level>=I<NUM|NAME>
 
